style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: inherit;
}

body {
    margin: 0;
    background-color: #1F2937;
    box-sizing: border-box;
}

.heading{
    background-color: #1F2937;
    margin: 115px 145px auto 200px;
    width: 450px;
}

h1 {
    color: #ffffff;
    font-size: 40px;
    margin-bottom: 10px;
    font-family: "Karla";
    font-weight: 800;
    line-height: 40px;
}

h1 .heading__color {
    color: #4ADF86;
}

.heading__sentence-one, .heading__sentence-two {
    color: #D5D4D8;
    font-size: 20px;
    font-family: "Inter";
    font-weight: 300;
    margin-top: 5px;
}


.heading__sentence-two {
    display: inline-block;
}

button {
    background-color: #10B981;
    color: #ffffff;
    padding: 10px 20px;
    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
    border-radius: 6px;
    border: none;
    font-family: 'Inter';
    font-size: 16px;
    line-height: 24px;
}


hr {
    color: #2F3E53;
    border: 1px solid #2F3E53;
}

.heading__sentence-one, .password-button, hr {
    margin-bottom: 40px;
}


.password-container__one, 
.password-container__two,
.password-container__copy {
    background-color: #273549;
    color: #55F991;
    margin-bottom: 5px;
    width: 211px;
    height: 39px;
    border-radius: 6px;
    text-align: center;
    font-size: 18px;
    display: inline-block;
}



#password-length {
    margin-left: 5px;
    width: 50px;
    margin-right: 50%;

}

